[package]
name = "pio-cpp"
edition = "2021"
version = "0.1.0"

[lib]
path = "src/lib.rs"
name = "pio_cpp"
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[dependencies]
cpp = "0.5.9"
# esp-hal = "0.16.0"
# esp-idf-svc = "0.48.1"
# embedded-svc = "0.27.1"

[build-dependencies]
cpp_build = "0.5.9"